# gl-intelligence-platform

./: .dockerignore  .gcloudignore  .gitignore  ASU_2023_09_Tax_Reconciliation_CFO_Brief.pptx  Acquisition_Assessment_Truffles_AI.md  Call_Notes_April_11_2026.docx  EMAIL_SETUP.md  GL_Intelligence_Investor_Deck_BE_Technology (1).pptx  GL_Intelligence_Platform (6).html  PRODUCT_STRATEGY.md  RegTech_Reading_List_Complete.md  Revenue_Assessment_360_Degree.md  ai_landing_page_web_design_3_d_animation.gltf  chips.gltf  clarity_stream.gltf  cloudbuild.yaml  dashboard.html  disclosure-plates-3d.html  dise_full_mapping.json  edgar_sap_ecc_prospector.py  fasb_dise_platform.html  glass_aberration.gltf  lines_✨.gltf  run.py  untitled.gltf  untitled.usdz  vercel.json
.playwright-mcp/: page-2026-04-07T09-49-45-700Z.yml  page-2026-04-07T10-18-14-413Z.yml  page-2026-04-07T14-07-21-251Z.yml  (+27 more)
api/: README.md  pyproject.toml
api/src/: __init__.py  auth.py  config.py  main.py
api/src/agents/: __init__.py  base.py  db_helpers.py  registry.py
api/src/agents/common/: __init__.py  hooks.py
api/src/agents/dise/: __init__.py  anomaly_agent.py  disclosure_agent.py  mapping_agent.py  recon_agent.py
api/src/agents/tax/: __init__.py  categories.py  classifier_agent.py  disclosure_agent.py  etr_bridge_agent.py  tools.py
api/src/db/: __init__.py  audit.py  cortex.py  supabase.py
api/src/routes/: cortex.py  dise.py  health.py  sessions.py  tax.py
api/src/services/: __init__.py  session_service.py
api/src/session_management/: __init__.py  manager.py  types.py  worker.py
aws/: deploy.sh  (+2 more)
(+147 files in other folders)
